test/integration/bad/array-expr-decl-bad1.stan
data {
  array[1:2,2,:] real x;
}
